--- a/public/index.css
+++ b/public/index.css
@@ -4,45 +4,40 @@
 
 body {
     height: 100%;
+    background-image: url('assets/background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;    
 }
 
 body {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-align: center;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
-.form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
+h1 {
+    color: #585757;
+    font-size: 60px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
 }
 
-.form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
+h2 {
+    color: #9c9c9c;
+    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
 }
 
-.form-signin .form-control:focus {
-        z-index: 2;
-}
-
-.form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+.nav li {
+    float: left;
+    width: 8em;
 }
