--- a/public/student.css
+++ b/public/student.css
@@ -4,7 +4,7 @@
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    top: 70px; /* Stay at the top */
     left: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
@@ -18,7 +18,7 @@
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    top: 70px; /* Stay at the top */
     right: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
@@ -32,6 +32,7 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -42,6 +43,7 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -51,6 +53,7 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -61,6 +64,7 @@
     padding: 8px 8px 0 32px;
     text-decoration: none;
     font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #f1f1f1;
     display: block;
     transition: 0.3s;
@@ -71,6 +75,7 @@
     padding: 8px 8px 0px 32px;
     text-decoration: none;
     font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #f1f1f1;
     display: block;
     transition: 0.3s;
@@ -109,7 +114,11 @@
   #main {
     transition: margin-left .5s;
     transition: margin-right .5s;
-    padding: 20px;
+    padding: 10px;
+  }
+
+  body {
+    padding-top: 70px;
   }
   
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
